--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="There is only one correct second. Find the moment." />
   <link rel="stylesheet" href="styles.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800;900&display=swap" rel="stylesheet">
-
+  <script defer src="https://cloud.umami.is/script.js" data-website-id="54df0a68-bb7c-4c18-bdc0-47701e945998"></script>
   <!-- ✅ AdSense: uncomment after approval + replace ca-pub-XXXX -->
   <!--
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXXXXXXXXXX"
